--- a/locales/de.json
+++ b/locales/de.json
@@ -2,7 +2,7 @@
   "ui_use": "Benutzen",
   "ui_give": "Geben",
   "ui_close": "Schließen",
-  "ui_drop": "Fallen lassen",
+  "ui_drop": "Wegwerfen",
   "ui_removeattachments": "Entferne Aufsätze",
   "ui_copy": "Kopiere Seriennummer",
   "ui_durability": "Haltbarkeit",
